--- a/projects/aashirwad.html
+++ b/projects/aashirwad.html
@@ -161,6 +161,18 @@
     </div>
   </div>
 
+  <section style="padding:60px 20px; ">
+    <div style="max-width:1000px; margin:0 auto;">
+      <h2 style="text-align:center; font-size:2.2rem; margin-bottom:40px; color:#333;">Ashirwad Apartment | 2BHK Flats | Deopur, Dhule</h2>
+      <div style="background:white; padding:32px; border-radius:16px; box-shadow:0 4px 20px rgba(0,0,0,0.1);">
+        <h3 style="color:#ff7e00; margin-bottom:16px; font-size:1.4rem;">Project Overview</h3>
+        <p style="color:#555; line-height:1.8; font-size:1.1rem;">
+          Ashirwad Apartment is a thoughtfully crafted residential project that brings together the best of modern lifestyle and timeless comfort. Offering well-planned 2BHK homes, it combines elegant design with practical functionality to meet the needs of today's families. With its prime location, contemporary amenities, and superior construction quality, Ashirwad Apartment is more than just a home—it's a space designed for comfort, convenience, and long-term value.
+        </p>
+      </div>
+    </div>
+  </section>
+
   <section id="viewer">
     <h2>Interactive 3D Apartment Viewer</h2>
     <p>Walk through your future home virtually!</p>
@@ -173,32 +185,51 @@
   
   <div class="highlight-grid">
     <div class="highlight-item">
-      🏊‍♂️ <strong>RCC Structure</strong><br/>
-      We bring Comfort by providing a strong foundation
+      🏊‍♂️ <strong>Modern Architecture & Design</strong><br/>
+      We bring Comfort by providing a strong foundation 
+    </div>
+    <div class="highlight-item">
+      🏊‍♂️ <strong>Spaciaus Spaces</strong><br/>
+      We bring spaciaus 2BHK aparments for comfortable living
     </div>
     <div class="highlight-item">
       🚗 <strong>Parking Spaces</strong><br/>
       Ample parking for residents and guests
     </div>
     <div class="highlight-item">
-      👶 <strong>Children's Play Area</strong><br/>
-      Safe and fun outdoor space
+      👶 <strong>Proximity</strong><br/>
+      Prime location in Deopur, close to schools, markets & transport
     </div>
     <div class="highlight-item">
-      🔋 <strong>24x7 Power Backup</strong><br/>
-      Never worry about power cuts
+      🔋 <strong>Safety & Security</strong><br/>
+      Parking area is equipped with CCTV surveillance for added safety
     </div>
     <div class="highlight-item">
-      📱 <strong>Smart Home Features</strong><br/>
-      Control lights, fans & security from your phone
+      📱 <strong>High Quality Materials</strong><br/>
+      We provide best quality materials for construction
     </div>
     <div class="highlight-item">
-      🌳 <strong>Rooftop Garden</strong><br/>
-      Serene views and fresh air every day
+      🌳 <strong>Lift</strong><br/>
+      Automatic lift with an ARD security system
+    </div>
+     <div class="highlight-item">
+      🌳 <strong>Water Supply</strong><br/>
+      24/7 water supply with underground and overhead tanks
     </div>
   </div>
 </section>
 
+<section style="padding:60px 20px; background:linear-gradient(180deg, #ffdbcbf3 0%, #fff 100%);">
+  <div style="max-width:1000px; margin:0 auto;">
+    <h2 style="text-align:center; font-size:2rem; margin-bottom:40px; color:#333;">Location</h2>
+    <p>Plot no. 32, 33, Datta Colony, behind Ekvira Highschool, Deopur Dhule</p>
+    <div style="border-radius:16px; overflow:hidden; box-shadow:0 4px 20px rgba(0,0,0,0.1);">
+      <iframe 
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d783.4364869570496!2d74.7799603191582!3d20.925469501397775!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bdecf7d6c42d5ff%3A0x773aaf730421c356!2sShri%20Ekviradevi%20Secondary%20and%20Higher%20Secondary%20School%2C%20Deopur%2C%20Dhule!5e0!3m2!1sen!2sin!4v1757865898639!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>" 
+      </iframe>
+    </div>
+  </div>
+</section>
 
   <section>
     <div class="conctact">
