--- a/index.html
+++ b/index.html
@@ -114,6 +114,8 @@
         <img src="images/YogLogo.png" alt="Yog Construction Logo" />
       </a>
     </div>
+    <!-- Add right logo in top-header -->
+    <img src="images/logo-removebg-preview.png" alt="HouseInMeta Logo" style="height:38px; margin-left:1em;">
     <nav id="mainNav">
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -263,12 +265,16 @@
   <!-- Footer -->
   <footer>
     <div class="container">
-      <div class="footer-info">
-        <p>&copy; 2025 Yog Construction. All rights reserved.</p>
-        <p style="margin-top:1em; font-size:0.95em;">
-          This website is powered by
-          <a href="https://www.houseinmeta.com" target="_blank" rel="noopener" style="color:#ff9800; font-weight:bold;">HouseInMeta</a>
-        </p>
+      <div class="footer-info" style="display:flex; align-items:center; justify-content:space-between;">
+        <img src="images/YogLogo.png" alt="Yog Construction Logo" style="height:38px; margin-right:1em;">
+        <div style="flex:1; text-align:center;">
+          <p>&copy; 2025 Yog Construction. All rights reserved.</p>
+          <p style="margin-top:1em; font-size:0.95em;">
+            This website is powered by
+            <a href="https://www.houseinmeta.com" target="_blank" rel="noopener" style="color:#ff9800; font-weight:bold;">HouseInMeta</a>
+          </p>
+        </div>
+        <img src="images/logo-removebg-preview.png" alt="HouseInMeta Logo" style="height:38px; margin-left:1em;">
       </div>
     </div>
   </footer>
