--- a/src/3D_view.html
+++ b/src/3D_view.html
@@ -7,10 +7,15 @@
       text-align: center;
       background: #f0f0f0;
     }
-    img {
-      max-width: 90%;
-      margin-top: 30px;
+       img {
+      display: block;
+      margin: 30px auto 0 auto;
+      max-width: 100vw;
+      max-height: 80vh;
+      width: auto;
+      height: auto;
       border: 1px solid #ccc;
+      box-sizing: border-box;
     }
   </style>
 </head>
