--- a/src/2D_view.html
+++ b/src/2D_view.html
@@ -27,7 +27,7 @@
     const params = new URLSearchParams(window.location.search);
     const aptId = params.get('id'); // e.g., A-102
     if (aptId) {
-      document.getElementById('title').textContent = `2D Floor Plan of an Apartment`;
+      document.getElementById('title').textContent = `2D Floor Plan`;
       document.getElementById('floor-image').src = `https://apt-hsim-models.s3.eu-west-3.amazonaws.com/apts/${aptId}.jpg`;
     }
   </script>
