Open it in self tab

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
           <img src="images/aashirwad.jpg" alt="Aashirwad Apartment" />
           <div class="project-info">
             <h4>“आशिर्वाद अपार्टमेंट”</h4>
-            <button class="fab-explore" onclick="window.open('projects/aashirwad.html', '_blank')">Explore Now</button>
+            <button class="fab-explore" onclick="window.open('projects/aashirwad.html', '_self')">Explore Now</button>
           </div>
         </div>
         <div class="project">
