changes for apt wlktr

--- a/src/main-ext.html
+++ b/src/main-ext.html
@@ -102,7 +102,7 @@ document.addEventListener('DOMContentLoaded', function() {
   };
 
   window.openApartmentPage = function(apartmentId) {
-    window.location.href = `apartment360.html?id=${apartmentId}`;
+    window.location.href = `apartment_view.html?id=${apartmentId}`;
   };
 
   window.openApartment2DPage = function(apartmentId) {
