YouTube link for Walkthrough

--- a/projects/aashirwad.html
+++ b/projects/aashirwad.html
@@ -5,14 +5,61 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>आशिर्वाद अपार्टमेंट</title>
   <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-FW54TPQZCH"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-FW54TPQZCH"></script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "ApartmentComplex",
+    "name": "Ashirwad Apartment",
+    "description": "Ashirwad Apartment offers premium 2BHK flats for sale in Dhule with modern amenities and great connectivity.",
+    "url": "https://www.yogconstruction.com/projects/aashirwad.html",
+    "image": "https://www.yogconstruction.com/images/ASHIRWAD_APARTMENT_b.jpg",
+    "address": {
+      "@type": "Plot no. 32, 33, Datta Colony, behind Ekvira Highschool, Deopur Dhule",
+      "streetAddress": "Near Ekvira Highschool, Deopur",
+      "addressLocality": "Dhule",
+      "addressRegion": "Maharashtra",
+      "postalCode": "424004",
+      "addressCountry": "IN"
+    },
+    "containedInPlace": {
+      "@type": "Place",
+      "name": "Dhule"
+    },
+    "numberOfRoomsTotal": 40,
+    "amenityFeature": [
+      {
+        "@type": "LocationFeatureSpecification",
+        "name": "Parking",
+        "value": true
+      },
+      {
+        "@type": "LocationFeatureSpecification",
+        "name": "Lift",
+        "value": true
+      },
+      {
+        "@type": "LocationFeatureSpecification",
+        "name": "24x7 Security",
+        "value": true
+      }
+    ],
+    "offers": {
+      "@type": "Offer",
+      "price": "3500000",
+      "priceCurrency": "INR",
+      "availability": "https://schema.org/InStock",
+      "url": "https://www.yogconstruction.com/"
+    }
+  }
+  </script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
-  gtag('config', 'G-FW54TPQZCH');
-</script>
+    gtag('config', 'G-FW54TPQZCH');
+  </script>
   <style>
     body {
       margin: 0;
@@ -199,6 +246,20 @@
     <iframe src="../src/main-ext.html" title="3D Viewer"></iframe>
   </section>
 
+<section id="virtual-tour" style="padding:60px 20px; background:#ffdbcbf3;">
+  <div style="max-width:900px; margin:0 auto;">
+    <h2 style="text-align:center; font-size:2rem; margin-bottom:32px; color:#333;">Walkthrough into your Future Home</h2>
+    <p style="text-align:center; font-size:1.15rem; margin-bottom:24px;">
+      Watch a walkthrough of Ashirwad Apartment and experience your future home virtually.
+    </p>
+    <div style="display:flex; justify-content:center;">
+      <iframe width="720" height="405" src="https://www.youtube.com/embed/o3CdlQAhyrg"
+        title="walkthrough into your future Home ! " frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen style="border-radius:14px; box-shadow:0 2px 16px rgba(0,0,0,0.13); max-width:100%;"></iframe>
+    </div>
+  </div>
+</section>
 <section id="highlights">
   <h2>Project Highlights</h2>
   <p>Top features that make Aashirwad apartment your perfect home</p>
