--- a/projects/aashirwad.html
+++ b/projects/aashirwad.html
@@ -3,7 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>आशिर्वाद अपार्टमेंट</title>
+   <title>Ashirwad Apartment | 2BHK Flats in Deopur, Dhule | Yog Construction</title>
+  <meta name="description" content="Explore Ashirwad Apartment by Yog Construction — spacious 2BHK flats in Deopur, Dhule with modern amenities, secure living & excellent connectivity. Book a site visit today!" />
+  <link rel="canonical" href="https://www.yogconstruction.com/projects/aashirwad.html" />
+  <!-- Open Graph / Social -->
+  <meta property="og:title" content="Ashirwad Apartment | 2BHK Flats in Deopur, Dhule | Yog Construction" />
+  <meta property="og:description" content="Ashirwad Apartment by Yog Construction — 2BHK flats in Deopur, Dhule. Modern amenities, prime location. Contact us to schedule a site visit." />
+  <meta property="og:type" content="website" />
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-FW54TPQZCH"></script>
   <script type="application/ld+json">
