--- a/projects/aashirwad.html
+++ b/projects/aashirwad.html
@@ -249,7 +249,7 @@
 <section id="viewer">
     <h2>Interactive 3D Apartment Viewer</h2>
     <p>Walk through your future home virtually!</p>
-    <iframe src="../src/main-ext.html" title="3D Viewer"></iframe>
+    <iframe src="https://www.houseinmeta.com/clients/Aashirwad/main-ext.html" title="3D Viewer"></iframe>
   </section>
 
 <section id="virtual-tour" style="padding:60px 20px; background:#ffdbcbf3;">
